2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/configure.in: Remove warning for --prefix=[...].
	* sysdeps/mach/hurd/configure: Regenerated.
	* sysdeps/unix/sysv/linux/configure.in: Move --prefix=/usr
	special-casing to...
	* sysdeps/gnu/configure.in: ... this new file.
	* sysdeps/unix/sysv/linux/configure: Regenerated.
	* sysdeps/gnu/configure: New generated file.

	* sysdeps/mach/hurd/bits/stat.h (struct stat): Align to what is done
	for Linux: use nsec instead of usec, as well as:
	[__USE_MISC || __USE_XOPEN2K8] (st_atim, st_mtim, st_ctim): New
	members of type struct timespec.
	[__USE_MISC || __USE_XOPEN2K8] (st_atime, st_mtime, st_ctime):
	New macros.
	(struct stat64): Likewise.
	(_STATBUF_ST_NSEC): New macro.
	* sysdeps/mach/hurd/xstatconv.c (xstat64_conv): Adapt to that.

	* hurd/lookup-retry.c (__hurd_file_name_lookup_retry): Use
	__strtoul_internal rather than strtoul.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* hurd/hurdsock.c (_hurd_socket_server): Check for negative domains,
	and reject them.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/setresgid.c (__setresgid): Handle the -1 case,
	which preserves existing values.
	* sysdeps/mach/hurd/setresuid.c (__setresuid): Likewise.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* hurd/hurdselect.c (_hurd_select): Return EINVAL for negative
	TIMEOUT values.  Return EINVAL for NFDS values either negative or
	greater than FD_SETSIZE.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/brk.c (_hurd_set_brk): When more space needs to be
	allocated, call __vm_protect to finish enabling the existing space, and
	pass a copy of _hurd_data_end instead of PAGEBRK to __vm_allocate to
	allocate the remainder.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/recvfrom.c (__recvfrom): Check also for a null
	address port.  Set ADDR_LEN to 0 when not filling ADDRARG.
